--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/styles">
-    <href="<link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
     <title>Document</title>
@@ -20,7 +20,8 @@
             <div class="text">Помощь<img src="./assets/Vector (3).png" alt="vector"></div>
             <div class="text">Санкт-Петербург<img src="./assets/Vector (3).png" alt="vector"></div>
             <div class="text">+ 7 495 967 13 01</div>
-            <div class="text">Личный кабинет<img src="./assets/account_circle.png" alt="account"></div>
+            <div class="text">Личный кабинет</div>
+            <div class="text"><img src="./assets/account_circle.png" alt="account"></div>
 
         </div>
         <div class="banner">
@@ -37,39 +38,45 @@
 
     </header>
 
-    <main class="main"> 
-        <div class="about"><h3>О страховании</h3>
-            <div class="images">Без ограничений
-                <img src="./assets/24-hours.png" alt="24">
+    <main class="main"> <h3>О страховании</h3>
+        <div class="about">
+            <div class="images">
+                <p class="text_images">Без ограничений</p>
+                <div class="img"><img src="./assets/24-hours.png" alt="24"></div>
                 <p class="text_images">обращение к доктору 24/7</p>
             </div>
-            <div class="images">Без ограничений
-                <img src="./assets/calendar 1.png" alt="cal">
+            <div class="images">
+                <p class="text_images">Без ограничений</p>
+                <div class="img"><img src="./assets/calendar 1.png" alt="cal"></div>
                 <p class="text_images">обращение к врачам-специалистам</p>
             </div>
-            <div class="images">24/7
-                <img src="./assets/insurance 1.png" alt="insurance">
+            <div class="images">
+                <p class="text_images">24/7</p>
+                <div class="img"><img src="./assets/insurance 1.png" alt="insurance"></div>
                 <p class="text_images">защита от несчастного случая</p>
             </div>
-            <div class="images">До 2-х раз в год
-                <img src="./assets/lab 1.png" alt="lab">
-                <p class="text_images">Лобораторные исследования</p>
+            <div class="images">
+                <p class="text_images">До 2-ух раз в год</p>
+                <div class="img"><img src="./assets/lab 1.png" alt="lab"></div>
+                <p class="text_images">Лабораторные исследования </p>
             </div>
-            <div class="images">До 10 минут
-                <img src="./assets/butterfly-simple-gross-outline-shape-from-top-view.png" alt="10min">
+            <div class="images">
+                <p class="text_images">До 10 минут</p>
+                <div class="img"><img src="./assets/butterfly-simple-gross-outline-shape-from-top-view.png" alt="10min"></div>
                 <p class="text_images">Упрощенная система страхования</p>
             </div>
         </div>
-
-        <div class="offers"><h3>Условия, которые мы предоставим Вам</h3>
+        <h3>Условия, которые мы предоставим Вам</h3>
+        <div class="offers">
             <div class="offer_container">
+                <div class="aside_picture">
+                    <img src="./assets/Doctors-rafiki-2 1.png" alt="doctor">
+                </div>
                 <div class="offer">
                     <h4 class="offer_title">20+</h4>
                     <article class="offer_text">Высококвалифированных врачей, к которым вы можете обращаться 24/7</article>
                 </div>    
-                <div class="aside_picture">
-                    <img src="./assets/Doctors-rafiki-2 1.png" alt="doctor">
-                </div>
+                
             </div>
             <div class="offer_container">
                 <div class="offer">
@@ -80,14 +87,16 @@
                     <img src="./assets/Group 66.png" alt="Group">
                 </div>
             </div>
+
             <div class="offer_container">
+                <div class="aside_picture">
+                    <img src="./assets/Jogging-rafiki 1.png" alt="jogging">
+                </div>
                 <div class="offer">
                     <h4 class="offer_title">600 000Р</h4>
                     <article class="offer_text">Сумма страховой защиты от несчастного случая</article>
                 </div>    
-                <div class="aside_picture">
-                    <img src="./assets/Jogging-rafiki 1.png" alt="jogging">
-                </div>
+                
             </div>    
 
         </div>
