--- a/index.html
+++ b/index.html
@@ -105,22 +105,19 @@
     </main>
     <footer class="footer">
         <div class="time">
-            <article class="timetable">
-                График работы главного офиса
-                125252, г. Москва, 
-                ул. Зорге, д. 22 А, офис 811
-                Пн. - Чт. с 9:00 до 18:00
-                Пт.  с 9:00 до 16:45 
-                Сб-Вс выходной
-            </article>
+            <p>График работы главного офиса</p> 
+            <p>125252, г. Москва,</p>  
+            <p>ул. Зорге, д. 22 А, офис 811</p> 
+            <p>Пн. - Чт. с 9:00 до 18:00</p>
+            <p>Пт.  с 9:00 до 16:45 </p>
+            <p>Сб-Вс выходной</p>
         </div>
         <div class="contacts">
-            тел.: +7 495 967 13 01
-            Email для связи с нами 
-            info@prolife.ru
+            <p>тел.: +7 495 967 13 01</p>
+            <p>Email для связи с нами </p>
+            <p>info@prolife.ru</p>
 
         </div>
-        
     </footer>
     
 </body>
